--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+.DS_Store
 template/objects/
 template/objects/**
 template/dict.xml
-output/dict.json
+output/dict*
 node_modules
+package-lock.json
