Upgrade to cheerio v1.x
Incorporates the one fix that @ponychicken made to cheerio,
amongst other benefits.

See https://github.com/cheeriojs/cheerio/commit/fd87797d2849f1ab48cbd1ff011c4001b5c8570d#commitcomment-37190325 for some details

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Leo Koppelkamm",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "DieBuche/cheerio",
+    "cheerio": "^1.0.0-rc.3",
     "commander": "^2.2.0",
     "node-dir": "^0.1.5",
     "ent": "^2.0.0",
