--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "unorm": "^1.3.3",
     "async": "^0.9.0",
     "puid": "^0.5.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.0.0",
+    "eslint-config-semistandard": "^15.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
