Automate creation of a release w/ Dictionary zip

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,9 @@ jobs:
         run: node index.js
       - name: Package dictionary
         run: cd template && make
+      - name: Zip up dictionary
+        run: zip -r9 websters-1913-dictionary.zip '/Applications/Utilities/Dictionary Development Kit'
+      - name: Upload dictionary archive
+        uses: actions/upload-artifact@v2
+        with:
+          path: websters-1913-dictionary.zip
