Zip up the right dir

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Package dictionary
         run: cd template && make
       - name: Zip up dictionary
-        run: zip -r9 websters-1913-dictionary.zip '/Applications/Utilities/Dictionary Development Kit'
+        run: zip -r9 websters-1913-dictionary.zip '~/Library/Dictionaries'
       - name: Upload dictionary archive
         uses: actions/upload-artifact@v2
         with:
