--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           sudo mv -v 'Dictionary Development Kit' '/Applications/Utilities/Dictionary Development Kit'
       - run: npm install
       - name: Convert dictionary format
-        run: node index.js
+        run: npm start
       - name: Package dictionary
         run: cd template && make
       - name: Zip up dictionary
