--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Package dictionary
         run: cd template && make
       - name: Zip up dictionary
-        run: zip -r9 websters-1913-dictionary.zip './objects'
+        run: zip -r9 websters-1913-dictionary.zip './objects/Webster’s 1913.dictionary'
       - name: Upload dictionary archive
         uses: actions/upload-artifact@v2
         with:
