--- a/template/Info.plist
+++ b/template/Info.plist
@@ -14,6 +14,8 @@
 	<string>Public Domain</string>
 	<key>DCSDictionaryManufacturerName</key>
 	<string>Webster</string>
+	<key>DCSDictionaryFrontMatterReferenceID</key>
+	<string>front_back_matter</string>
 	<key>DCSDictionaryDefaultPrefs</key>
 	<dict>
 		<key>pronunciation</key>
