--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Cache node modules
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
       - name: Download Dictionary Development Kit
         uses: carlosperate/download-file-action@v1.0.3
         id: download-poetry
@@ -37,4 +48,42 @@ jobs:
       - name: Upload dictionary archive
         uses: actions/upload-artifact@v2
         with:
+          name: dictionary
           path: websters-1913-dictionary.zip
+  release:
+    name: Create Release
+    if:  ${{ startsWith(github.ref, '1.') }}
+    needs: build
+    runs-on: macos-latest
+    steps:
+      - name: Download dictionary archive
+        uses: actions/download-artifact@v2
+        with:
+          name: dictionary
+      - name: Show contents
+        run: ls -lah
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          # This pulls from the CREATE RELEASE step above, referencing its ID
+          # to get its outputs object, which include a `upload_url`.
+          # See this blog post for more info:
+          # https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dictionary/websters-1913-dictionary.zip
+          asset_name: websters-1913-dictionary.zip
+          asset_content_type: application/zip   
+
