Try to fix version of linter

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: hallee/eslint-action@master
+      - uses: hallee/eslint-action@1.0
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   build:
