--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "websterParser",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Parses the Webster Unabridged Dictionary from Project Guttenberg into a more usable format",
   "main": "index.js",
   "author": "Leo Koppelkamm",
-  "license": "GPL",
+  "license": "GPL-3.0-or-later",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ponychicken/WebsterParser.git"
+  },
+  "private": true,
   "scripts": {
     "start": "node index.js",
     "lint": "eslint .",
