--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Package dictionary
         run: cd template && make
       - name: Zip up dictionary
-        run: zip -r9 websters-1913-dictionary.zip 'template/objects/websters-1913.dictionary'
+        run: zip -r9 -j websters-1913-dictionary.zip 'template/objects/websters-1913.dictionary'
       - name: Upload dictionary archive
         uses: actions/upload-artifact@v2
         with:
