--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: hallee/eslint-action@1.0.2
+      - uses: actions/setup-node@v1
+      - run: npm install
+      - uses: goto-bus-stop/standard-action@v1
+        with:
+          annotate: true
+          linter: semistandard
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   build:
