Ensure ZIP contains a .dictionary package
The zip -j flag drops the packaging as well, meaning the end user has
to rename the directory to turn it back into a Dictionary package.

This ensures that what is unzipped is a .dictionary package.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,12 +53,12 @@ jobs:
       - name: Create dictionary package
         run: npm run build
       - name: Zip up dictionary
-        run: zip -r9 -j websters-1913-dictionary.zip 'template/objects/websters-1913.dictionary'
+        run: cd template/objects && zip -r9 websters-1913.dictionary.zip websters-1913.dictionary
       - name: Upload dictionary archive
         uses: actions/upload-artifact@v2
         with:
           name: dictionary
-          path: websters-1913-dictionary.zip
+          path: template/objects/websters-1913.dictionary.zip
   release:
     name: Create Release
     if: ${{ startsWith(github.ref, 'refs/tags') }}
@@ -92,6 +92,6 @@ jobs:
           # See this blog post for more info:
           # https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: websters-1913-dictionary.zip
-          asset_name: websters-1913-dictionary.zip
+          asset_path: websters-1913.dictionary.zip
+          asset_name: websters-1913.dictionary.zip
           asset_content_type: application/zip
