--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,10 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[/srcFiles/**]
+insert_final_newline = false
+trim_trailing_whitespace = false
+
 [*.md]
 trim_trailing_whitespace = false
 indent_size = 4
