Imrove source parsing for WEBSTERONLY
Drops individual defs if not from Webster (or no source defined), then
drops any words with no defs. Improves more aggressive cleaning of
source tags when in WEBSTERONLY mode.

Also updates the filename to render better in Dictionary.app.

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,10 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[/srcFiles/**]
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+
 [*.md]
 trim_trailing_whitespace = false
 indent_size = 4
