--- a/template/Makefile
+++ b/template/Makefile
@@ -8,7 +8,7 @@
 
 # You need to edit these values.
 
-DICT_NAME		=	"websters-1913"
+DICT_NAME		=	"Webster's Unabridged Dictionary (1913)"
 DICT_SRC_PATH	=	dict.xml
 CSS_PATH		=	styles.css
 PLIST_PATH		=	info.plist
