--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - master
     tags:
-      - '*'
+      - "*"
   pull_request:
     branches:
       - master
@@ -18,12 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install
-      - uses: goto-bus-stop/standard-action@v1
-        with:
-          annotate: true
-          linter: semistandard
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - run: npm run lint
+
   build:
     runs-on: macos-latest
     steps:
@@ -61,6 +57,7 @@ jobs:
         with:
           name: dictionary
           path: template/objects/websters-1913.dictionary.zip
+
   release:
     name: Create Release
     if: ${{ startsWith(github.ref, 'refs/tags') }}
