--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websterParser",
+  "name": "websterparser",
   "version": "1.3.2",
   "description": "Parses the Webster Unabridged Dictionary from GCIDE into a more usable format",
   "main": "index.js",
