--- a/package.json
+++ b/package.json
@@ -29,14 +29,8 @@
     "@types/cheerio": "^0.22.13",
     "@types/node": "^12.7.1",
     "@types/node-dir": "0.0.33",
-    "@typescript-eslint/parser": "^2.0.0",
-    "eslint": "^7.0.0",
-    "eslint-config-semistandard": "^15.0.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "semistandard": "^14.2.0"
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^7.32.0"
   }
 }
