--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "srcFiles"]
 	path = srcFiles
-	url = https://git.savannah.gnu.org/git/gcide.git
+	url = https://github.com/jeffbyrnes/gnu_gcide.git
