--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,25 +75,6 @@ jobs:
         run: ls -lah
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # This pulls from the CREATE RELEASE step above, referencing its ID
-          # to get its outputs object, which include a `upload_url`.
-          # See this blog post for more info:
-          # https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: websters-1913.dictionary.zip
-          asset_name: websters-1913.dictionary.zip
-          asset_content_type: application/zip
+          files: websters-1913.dictionary.zip
